--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "express": "^4.17.1",
+    "firebase": "^7.19.1",
+    "firebase-admin": "^9.1.1",
+    "firebase-functions": "^3.11.0",
+    "nodemon": "^2.0.4",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
