--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7",
+    "spotify-web-api-node": "^4.0.0",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
