--- a/functions/package.json
+++ b/functions/package.json
@@ -17,8 +17,8 @@
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
     "firebase-tools": "^8.10.0",
+    "nodemon": "^2.0.4",
     "passport-spotify": "^1.1.0",
-    "qs": "^6.9.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
